syntax = "proto3";

package gqlgen.api;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/vvakame/til/grpc/grpc-gqlgen/gqlgen-proto;gqlgen_proto";

extend google.protobuf.FileOptions {
    FileRule resolver = 50000;
}

extend google.protobuf.MethodOptions {
    SchemaRule schema = 50001;
}

extend google.protobuf.MessageOptions {
    MessageRule type = 50002;
}

extend google.protobuf.FieldOptions {
    FieldRule field = 50003;
}

extend google.protobuf.EnumOptions {
    EnumRule enum = 50004;
}

extend google.protobuf.EnumValueOptions {
    EnumValueRule enum_value = 50005;
}

message FileRule {
    repeated InferrenceRule type_inference = 1;
}

message InferrenceRule {
    string src = 1;
    string dest = 2;
    MessageType type = 3;
}

message SchemaRule {
    oneof pattern {
        string query = 1;
        string mutation = 2;
        string subscription = 3;
    }
    // TODO paging, offset
}

message MessageRule {
    string alias = 1;
    MessageType type = 2;
}

enum MessageType {
    UNKNOWN = 0;
    TYPE = 1;
    INPUT = 2;
}

message FieldRule {
    string alias = 1;
    bool optional = 2;
    bool id = 3;
}

message EnumRule {
    string alias = 1;
}

message EnumValueRule {
}
